 * added: Ruby interface for libUSB (base/usb.c)
 * x11: now emits "keypress" and "keyrelease" messages
 * [@downscale_by] now supports 4 channels (therefore [peephole] does too)
 * [@out quartz] makes a native MacOS (Cocoa+Quartz) window (warning: buggy)
 * support for Apple QuickTime movie decoding (format/quicktimeapple.c)
 * fixed bugs in: x11, @draw_image, ...
 * "open x11" now allows any display spec (including dual head setup)
 * now includes the pictures used in the examples
     (not a separate download anymore)
 * [@out x11 here override_redirect] (override window manager; be careful with this)
 * [pd_netsocket] does like netsend/netreceive] but two-way
   (warning: not complete yet)
 * support for nested lists in incoming messages
 * new object classes:
   [foreach], [rubysprintf], [listflatten]
   jMax emulation: [list], [listlength], [listelement], [listsublist]
   jMax emulation: [listprepend], [listappend], [listreverse], [oneshot]
   TEST-ME: [messageprepend], [messageappend], [@transpose]

version 0.7.5 (2003.09.28):

 * type aliases: int32,i32,i; int16,i16,s; uint8,u8,b; float32,f32,f
 * added support for float64 (alias f64, d)
 * added support for int64 (alias i64, l)
 * doc: added number type table
 * @convolve: supports even-sized grids
 * fixed bug: puredata gf clock ran way too fast
 * rewrote the profiler subsystem (and removed bugs)
 * @scale_by: now works with any number of channels
 * renamed samples/ to jmax_examples/
 * Algebraic Properties Descriptions (internal, used for accelerations)
 * @convolve,@outer,@for,@inner,@draw_polygon: much faster
 * quicktime: support for pluggable codecs (eg: dv, divx, rpza, ...)
 * quicktime: fixed more bugs
 * quicktime: major speed increase
 * quicktime: added "colorspace" option
 * videodev: fixed bugs
 * videodev: removed obsolete option "noinit"
 * videodev: added option "colormodel" (especially because of new camera drivers)
 * sdl: added automatic resizing of window
 * png: read support