@@ -108,10 +108,12 @@ self.post_header = "[gf] "
 
 def self.gfpost2(fmt,s); post("%s",s) end
 
+if GridFlow.bridge_name then
 self.post "This is GridFlow #{GridFlow::GF_VERSION} within Ruby version #{VERSION}"
 self.post "base/main.c was compiled on #{GridFlow::GF_COMPILE_TIME}"
 self.post "Please use at least 1.6.6 if you plan to use sockets" \
 	if VERSION < "1.6.6"
+end
 
 Brace1 = "{".intern
 Brace2 = "}".intern
@@ -463,7 +465,7 @@ def GridFlow.load_user_config
 end
 
 END {
-	puts "This is an END block"
+#	puts "This is an END block"
 	GridFlow.fobjects_set.each {|k,v|
 		# p k
 		k.delete if k.respond_to? :delete
